--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "hey-tools",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "js functions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/HEYAN123/hey-tools/issues"
   },
-  "homepage": "https://github.com/HEYAN123/hey-tools#readme"
+  "homepage": "https://github.com/HEYAN123/hey-tools#readme",
+  "dependencies": {
+    "typescript": "^3.9.7"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.1.1"
+  }
 }
