--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "js functions",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require @babel/register --reporter spec",
+    "test": "mocha --reporter spec",
     "build": "tsc"
   },
   "repository": {
@@ -24,13 +24,7 @@
     "typescript": "^3.9.7"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/register": "^7.10.5",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
-    "mocha": "^8.1.1"
+    "mocha": "^7.0.0"
   }
 }
