--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "js functions",
   "main": "index.js",
   "scripts": {
-    "test": "tsc && mocha --reporter spec",
+    "test": "tsc && mocha --reporter spec && rm -rf libs utils && mv -f dist/* . && rm -rf dist",
     "build": "tsc"
   },
   "repository": {
